COUNT experimentation done

--- a/experiments/Experimentation Dataset.ipynb
+++ b/experiments/Experimentation Dataset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -841,16 +841,6 @@
       "BP Matching:  641.0\n",
       "NAIVE Matching:  4131\n",
       "SAMPLED Matching:  1824 \n",
-      "\n",
-      "MAX Count of Matches:\n",
-      "BP Matching Count: 100\n",
-      "NAIVE Matching Count:  1473\n",
-      "SAMPLED Matching Count: 713 \n",
-      "\n",
-      "MIN Count of Matches:\n",
-      "BP Matching Count: 100\n",
-      "NAIVE Matching Count:  491\n",
-      "SAMPLED Matching Count: 222 \n",
       "\n"
      ]
     }
@@ -874,18 +864,7 @@
     "print(\"MIN Matching Bound:\")\n",
     "print(\"BP Matching: \", total_min)\n",
     "print(\"NAIVE Matching: \", naive_total_min)\n",
-    "print(\"SAMPLED Matching: \", sampled_total_min, \"\\n\")\n",
-    "\n",
-    "\n",
-    "print(\"MAX Count of Matches:\")\n",
-    "print(\"BP Matching Count:\", len(out_max))\n",
-    "print(\"NAIVE Matching Count: \", len(max_compare_all_edit_match))\n",
-    "print(\"SAMPLED Matching Count:\", len(max_compare_sampled_edit_match), \"\\n\")\n",
-    "\n",
-    "print(\"MIN Count of Matches:\")\n",
-    "print(\"BP Matching Count:\", len(out_min))\n",
-    "print(\"NAIVE Matching Count: \", len(min_compare_all_edit_match))\n",
-    "print(\"SAMPLED Matching Count:\", len(min_compare_sampled_edit_match), \"\\n\")"
+    "print(\"SAMPLED Matching: \", sampled_total_min, \"\\n\")"
    ]
   },
   {
@@ -902,8 +881,6 @@
     }
    ],
    "source": [
-    "# print(min_compare_all_jaccard_match, \"\\n\")\n",
-    "\n",
     "print(max_compare_all_edit_match)\n",
     "# print(table_a_non_duplicated)\n",
     "# print(table_b)\n",
@@ -940,8 +917,7 @@
     "        else:\n",
     "            out_dict[splitted1[0]] = [(val2, \"min\", weight)]\n",
     "\n",
-    "    return out_dict\n",
-    "            "
+    "    return out_dict"
    ]
   },
   {
@@ -1270,36 +1246,72 @@
    ],
    "source": [
     "for i in form_output_all.items():\n",
-    "    print(i, \"\\n\\n\")\n"
+    "    print(i, \"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results for \"COUNT\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "count_edited_bip_graph = one_to_n.COUNT_edit_edge_weight(bipartite_graph_result)\n",
+    "count_matching_set_maximal = nx.algorithms.matching.max_weight_matching(count_edited_bip_graph)\n",
+    "count_matching_set_minimal = minimal_matching(count_edited_bip_graph)\n",
+    "\n",
+    "out_max_count = fetch_sum(count_edited_bip_graph, count_matching_set_maximal)\n",
+    "out_min_count = fetch_sum(count_edited_bip_graph, count_matching_set_minimal)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BP Matching: Highest bound for maximum: 100\n",
+      "BP Matching: Lowest bound for minimum: 100 \n",
+      "\n",
+      "MAX Count of Matches:\n",
+      "BP Matching Count: 100\n",
+      "NAIVE Matching Count:  1473\n",
+      "SAMPLED Matching Count: 713 \n",
+      "\n",
+      "MIN Count of Matches:\n",
+      "BP Matching Count: 100\n",
+      "NAIVE Matching Count:  491\n",
+      "SAMPLED Matching Count: 222 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_max_count = sum_total_weights(out_max_count)\n",
+    "print(\"BP Matching: Highest bound for maximum:\", total_max_count)\n",
+    "\n",
+    "total_min_count = sum_total_weights(out_min_count)\n",
+    "print(\"BP Matching: Lowest bound for minimum:\", total_min_count, \"\\n\")\n",
+    "\n",
+    "print(\"MAX Count of Matches:\")\n",
+    "print(\"BP Matching Count:\", len(out_max))\n",
+    "print(\"NAIVE Matching Count: \", len(max_compare_all_edit_match))\n",
+    "print(\"SAMPLED Matching Count:\", len(max_compare_sampled_edit_match), \"\\n\")\n",
+    "\n",
+    "print(\"MIN Count of Matches:\")\n",
+    "print(\"BP Matching Count:\", len(out_min))\n",
+    "print(\"NAIVE Matching Count: \", len(min_compare_all_edit_match))\n",
+    "print(\"SAMPLED Matching Count:\", len(min_compare_sampled_edit_match), \"\\n\")"
+   ]
   },
   {
    "cell_type": "code",
