updated final experiments notebook

--- a/experiments/Amazon-Google Real Dataset Experiments.ipynb
+++ b/experiments/Amazon-Google Real Dataset Experiments.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum_real_data_exp_funcs.show_experiment_1_sum('../Amazon-GoogleProducts/Amazon.csv', '../Amazon-GoogleProducts/GoogleProducts.csv', '../Amazon-GoogleProducts/Amzon_GoogleProducts_perfectMapping.csv', 'SUM: Max n = 3, True n <= 3', 0.3)\n",
+    "sum_real_data_exp_funcs.show_experiment_1_sum('../Amazon-GoogleProducts/Amazon.csv', '../Amazon-GoogleProducts/GoogleProducts.csv', '../Amazon-GoogleProducts/Amzon_GoogleProducts_perfectMapping.csv', 'SUM: Max n = 5, True n <= 5', 0.3, 5, 5)\n",
     "\n"
    ]
   },
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum_real_data_exp_funcs.show_experiment_2('../Amazon-GoogleProducts/Amazon.csv', '../Amazon-GoogleProducts/GoogleProducts.csv', \"Median Over-estimation Rate vs N\", 0.8)\n",
+    "sum_real_data_exp_funcs.show_experiment_2('../Amazon-GoogleProducts/Amazon.csv', '../Amazon-GoogleProducts/GoogleProducts.csv', '../Amazon-GoogleProducts/Amzon_GoogleProducts_perfectMapping.csv', \"Median Over-estimation Rate vs N\", 0.8)\n",
     "\n"
    ]
   },
@@ -112,9 +112,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum_real_data_exp_funcs.show_experiment_4_balanced('../Amazon-GoogleProducts/Amazon.csv', '../Amazon-GoogleProducts/GoogleProducts.csv',\"Median Over-estimation Rate vs Similarity Metric Quality\",2)\n",
+    "sum_real_data_exp_funcs.show_experiment_4('../Amazon-GoogleProducts/Amazon.csv', '../Amazon-GoogleProducts/GoogleProducts.csv',\"Median Over-estimation Rate vs Similarity Metric Quality\",2)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
